visibility fixes

--- a/styles.css
+++ b/styles.css
@@ -19,3 +19,11 @@ h1, footer  {
 img {
     width: 90%;
 }
+
+ul {
+    background-color: white;
+}
+
+#mozilla {
+    color:white;
+}
